// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component should be a Breadcrumb 1`] = `
<nav
  className="breadcrumb"
>
  <ul>
    <li>
      <a
        href="/"
      >
        Home
      </a>
    </li>
    <li>
      <a
        href="/section"
      >
        Section
      </a>
    </li>
    <li
      className="is-active"
    >
      <a
        href="/detail"
      >
        Details
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Breadcrumb component should use inline style and custom size 1`] = `
<nav
  className="breadcrumb is-large"
  style={
    Object {
      "marginTop": 10,
    }
  }
>
  <ul>
    <li>
      <a
        href="/"
      >
        Home
      </a>
    </li>
    <li>
      <a
        href="/section"
      >
        Section
      </a>
    </li>
    <li
      className="is-active"
    >
      <a
        href="/detail"
      >
        Details
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Breadcrumb component should use separator arrow 1`] = `
<nav
  className="breadcrumb has-arrow-separator"
>
  <ul>
    <li>
      <a
        href="#1"
      >
        Storybook
      </a>
    </li>
    <li>
      <a
        href="#2"
      >
        Breadcrumb
      </a>
    </li>
    <li
      className="is-active"
    >
      <a
        href="#3"
      >
        Breadcrumb Types
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Breadcrumb component should use separator bullet 1`] = `
<nav
  className="breadcrumb has-bullet-separator"
>
  <ul>
    <li>
      <a
        href="#1"
      >
        Storybook
      </a>
    </li>
    <li>
      <a
        href="#2"
      >
        Breadcrumb
      </a>
    </li>
    <li
      className="is-active"
    >
      <a
        href="#3"
      >
        Breadcrumb Types
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Breadcrumb component should use separator dot 1`] = `
<nav
  className="breadcrumb has-dot-separator"
>
  <ul>
    <li>
      <a
        href="#1"
      >
        Storybook
      </a>
    </li>
    <li>
      <a
        href="#2"
      >
        Breadcrumb
      </a>
    </li>
    <li
      className="is-active"
    >
      <a
        href="#3"
      >
        Breadcrumb Types
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Breadcrumb component should use separator succeeds 1`] = `
<nav
  className="breadcrumb has-succeeds-separator"
>
  <ul>
    <li>
      <a
        href="#1"
      >
        Storybook
      </a>
    </li>
    <li>
      <a
        href="#2"
      >
        Breadcrumb
      </a>
    </li>
    <li
      className="is-active"
    >
      <a
        href="#3"
      >
        Breadcrumb Types
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Breadcrumb component should use separator undefined 1`] = `
<nav
  className="breadcrumb"
>
  <ul>
    <li>
      <a
        href="#1"
      >
        Storybook
      </a>
    </li>
    <li>
      <a
        href="#2"
      >
        Breadcrumb
      </a>
    </li>
    <li
      className="is-active"
    >
      <a
        href="#3"
      >
        Breadcrumb Types
      </a>
    </li>
  </ul>
</nav>
`;
